--- a/assets/scss/common/_fonts.scss
+++ b/assets/scss/common/_fonts.scss
@@ -4,8 +4,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src:
-    local("Inter"),
+  src: local("Inter"),
     url("/fonts/vendor/inter/inter-v2-latin-500.woff2") format("woff2"),
     url("/fonts/vendor/inter/inter-v2-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
